tests/baselines/reference/internalAliasVarInsideLocalModuleWithoutExportAccessError.errors.txt
==== tests/cases/compiler/internalAliasVarInsideLocalModuleWithoutExportAccessError.ts (1 errors) ====
    export module a {
        export var x = 10;
    }
    
    export module c {
        import b = a.x;
        export var bVal = b;
    }
    
    export var z = c.b;
                     ~
!!! internalAliasVarInsideLocalModuleWithoutExportAccessError.ts(10,18): error TS2094: The property 'b' does not exist on value of type 'typeof c'.